@@ -123,17 +123,19 @@ According to the guidelines every plugin should start it's output with
 
    SERVICE STATUS: First line of output | First part of performance data
 
-The service status part wasn't implemented in output in the past because it is not necessary. For notifications
-this string is available as a macro ($SERVICESTATE$) together with the state ID ($SERVICESTATEID$). If the macro
-is used for notifications you will have a doubled string (for example CRITICAL CRITICAL). While this is only
+The service status part wasn't implemented in output in the past because from a technically view it is not necessary.
+For notifications this string is available as a macro ($SERVICESTATE$) together with the state ID ($SERVICESTATEID$).
+If the macro is used for notifications you will have a doubled string (for example CRITICAL CRITICAL). While this is only
 cosmetics for email and in the webgui (if a check is red you need the extra string CRITICAL only when you are
 clour-blind) it can have side effects using SMS because the string length in SMS is limited. So you have to filter
 the message (sed) before you send it.
 
-To fulfill the rules of the Plugin Developer Guidelines an extra option --statelabel was added.
+To fulfill the rules of the Plugin Developer Guidelines an extra option --statelabels=<y/n> was added. The default is
+set in the plugin in the variable $statelabels_def which is set to "y" by default. 
 
-Simon Meggle proposed --nostatelabels (thanks Simon - it was a good idea to add it) but I preferred it the othr way
-round.
+Simon Meggle proposed --nostatelabels (thanks Simon - it was a good idea to add it) but I preferred it the other way
+round first. Caused by some feedback I decided to offer all options. If you don't like statelabels (like me) just set
+the variable to "n".
 
 
 Using a sessionfile
